attic/internal/pkg/zonefile/y.output

state 0
	$accept: .top $end 
	sections: .    (2)

	.  reduce 2 (src line 191)

	sections  goto 2
	top  goto 1

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  sections.    (1)
	sections:  sections.assertion 
	sections:  sections.shard 
	sections:  sections.pshard 
	sections:  sections.zone 

	assertionType  shift 11
	shardType  shift 12
	pshardType  shift 13
	zoneType  shift 14
	.  reduce 1 (src line 186)

	zone  goto 6
	zoneBody  goto 10
	shard  goto 4
	shardBody  goto 8
	pshard  goto 5
	pshardBody  goto 9
	assertion  goto 3
	assertionBody  goto 7

state 3
	sections:  sections assertion.    (3)

	.  reduce 3 (src line 195)


state 4
	sections:  sections shard.    (4)

	.  reduce 4 (src line 199)


state 5
	sections:  sections pshard.    (5)

	.  reduce 5 (src line 203)


state 6
	sections:  sections zone.    (6)

	.  reduce 6 (src line 207)


state 7
	assertion:  assertionBody.    (31)
	assertion:  assertionBody.annotation 

	lParenthesis  shift 16
	.  reduce 31 (src line 337)

	annotation  goto 15

state 8
	shard:  shardBody.    (12)
	shard:  shardBody.annotation 

	lParenthesis  shift 16
	.  reduce 12 (src line 237)

	annotation  goto 17

state 9
	pshard:  pshardBody.    (21)
	pshard:  pshardBody.annotation 

	lParenthesis  shift 16
	.  reduce 21 (src line 281)

	annotation  goto 18

state 10
	zone:  zoneBody.    (7)
	zone:  zoneBody.annotation 

	lParenthesis  shift 16
	.  reduce 7 (src line 212)

	annotation  goto 19

state 11
	assertionBody:  assertionType.ID lBracket objects rBracket 
	assertionBody:  assertionType.ID ID ID lBracket objects rBracket 

	ID  shift 20
	.  error


state 12
	shardBody:  shardType.ID ID shardRange lBracket shardContent rBracket 

	ID  shift 21
	.  error


state 13
	pshardBody:  pshardType.ID ID shardRange bfAlgo bfHash ID 

	ID  shift 22
	.  error


state 14
	zoneBody:  zoneType.ID ID lBracket zoneContent rBracket 

	ID  shift 23
	.  error


state 15
	assertion:  assertionBody annotation.    (32)

	.  reduce 32 (src line 338)


state 16
	annotation:  lParenthesis.annotationBody rParenthesis 

	sigType  shift 27
	.  error

	annotationBody  goto 24
	signature  goto 25
	signatureMeta  goto 26

state 17
	shard:  shardBody annotation.    (13)

	.  reduce 13 (src line 238)


state 18
	pshard:  pshardBody annotation.    (22)

	.  reduce 22 (src line 282)


state 19
	zone:  zoneBody annotation.    (8)

	.  reduce 8 (src line 213)


state 20
	assertionBody:  assertionType ID.lBracket objects rBracket 
	assertionBody:  assertionType ID.ID ID lBracket objects rBracket 

	ID  shift 29
	lBracket  shift 28
	.  error


state 21
	shardBody:  shardType ID.ID shardRange lBracket shardContent rBracket 

	ID  shift 30
	.  error


state 22
	pshardBody:  pshardType ID.ID shardRange bfAlgo bfHash ID 

	ID  shift 31
	.  error


state 23
	zoneBody:  zoneType ID.ID lBracket zoneContent rBracket 

	ID  shift 32
	.  error


state 24
	annotation:  lParenthesis annotationBody.rParenthesis 
	annotationBody:  annotationBody.signature 

	sigType  shift 27
	rParenthesis  shift 33
	.  error

	signature  goto 34
	signatureMeta  goto 26

state 25
	annotationBody:  signature.    (97)

	.  reduce 97 (src line 669)


state 26
	signature:  signatureMeta.    (99)
	signature:  signatureMeta.ID 

	ID  shift 35
	.  reduce 99 (src line 678)


state 27
	signatureMeta:  sigType.ed25519Type rains ID ID ID 

	ed25519Type  shift 36
	.  error


state 28
	assertionBody:  assertionType ID lBracket.objects rBracket 

	nameType  shift 53
	ip4Type  shift 55
	ip6Type  shift 54
	scionType  shift 56
	redirType  shift 57
	delegType  shift 58
	namesetType  shift 59
	certType  shift 60
	srvType  shift 61
	regrType  shift 62
	regtType  shift 63
	infraType  shift 64
	extraType  shift 65
	nextType  shift 66
	.  error

	objects  goto 37
	object  goto 38
	name  goto 39
	ip4  goto 41
	ip6  goto 40
	scion  goto 42
	redir  goto 43
	deleg  goto 44
	nameset  goto 45
	cert  goto 46
	srv  goto 47
	regr  goto 48
	regt  goto 49
	infra  goto 50
	extra  goto 51
	next  goto 52

state 29
	assertionBody:  assertionType ID ID.ID lBracket objects rBracket 

	ID  shift 67
	.  error


state 30
	shardBody:  shardType ID ID.shardRange lBracket shardContent rBracket 

	ID  shift 69
	rangeBegin  shift 70
	.  error

	shardRange  goto 68

state 31
	pshardBody:  pshardType ID ID.shardRange bfAlgo bfHash ID 

	ID  shift 69
	rangeBegin  shift 70
	.  error

	shardRange  goto 71

state 32
	zoneBody:  zoneType ID ID.lBracket zoneContent rBracket 

	lBracket  shift 72
	.  error


state 33
	annotation:  lParenthesis annotationBody rParenthesis.    (96)

	.  reduce 96 (src line 664)


state 34
	annotationBody:  annotationBody signature.    (98)

	.  reduce 98 (src line 673)


state 35
	signature:  signatureMeta ID.    (100)

	.  reduce 100 (src line 679)


state 36
	signatureMeta:  sigType ed25519Type.rains ID ID ID 

	rains  shift 73
	.  error


state 37
	assertionBody:  assertionType ID lBracket objects.rBracket 
	objects:  objects.object 

	nameType  shift 53
	ip4Type  shift 55
	ip6Type  shift 54
	scionType  shift 56
	redirType  shift 57
	delegType  shift 58
	namesetType  shift 59
	certType  shift 60
	srvType  shift 61
	regrType  shift 62
	regtType  shift 63
	infraType  shift 64
	extraType  shift 65
	nextType  shift 66
	rBracket  shift 74
	.  error

	object  goto 75
	name  goto 39
	ip4  goto 41
	ip6  goto 40
	scion  goto 42
	redir  goto 43
	deleg  goto 44
	nameset  goto 45
	cert  goto 46
	srv  goto 47
	regr  goto 48
	regt  goto 49
	infra  goto 50
	extra  goto 51
	next  goto 52

state 38
	objects:  object.    (35)

	.  reduce 35 (src line 361)


state 39
	object:  name.    (37)

	.  reduce 37 (src line 370)


state 40
	object:  ip6.    (38)

	.  reduce 38 (src line 371)


state 41
	object:  ip4.    (39)

	.  reduce 39 (src line 372)


state 42
	object:  scion.    (40)

	.  reduce 40 (src line 373)


state 43
	object:  redir.    (41)

	.  reduce 41 (src line 374)


state 44
	object:  deleg.    (42)

	.  reduce 42 (src line 375)


state 45
	object:  nameset.    (43)

	.  reduce 43 (src line 376)


state 46
	object:  cert.    (44)

	.  reduce 44 (src line 377)


state 47
	object:  srv.    (45)

	.  reduce 45 (src line 378)


state 48
	object:  regr.    (46)

	.  reduce 46 (src line 379)


state 49
	object:  regt.    (47)

	.  reduce 47 (src line 380)


state 50
	object:  infra.    (48)

	.  reduce 48 (src line 381)


state 51
	object:  extra.    (49)

	.  reduce 49 (src line 382)


state 52
	object:  next.    (50)

	.  reduce 50 (src line 383)


state 53
	name:  nameType.ID lBracket oTypes rBracket 

	ID  shift 76
	.  error


state 54
	ip6:  ip6Type.ID 

	ID  shift 77
	.  error


state 55
	ip4:  ip4Type.ID 

	ID  shift 78
	.  error


state 56
	scion:  scionType.ID 

	ID  shift 79
	.  error


state 57
	redir:  redirType.ID 

	ID  shift 80
	.  error


state 58
	deleg:  delegType.ed25519Type ID ID 

	ed25519Type  shift 81
	.  error


state 59
	nameset:  namesetType.freeText 

	ID  shift 83
	.  error

	freeText  goto 82

state 60
	cert:  certType.protocolType certUsage hashType ID 

	unspecified  shift 85
	tls  shift 86
	rhine  shift 87
	.  error

	protocolType  goto 84

state 61
	srv:  srvType.ID ID ID 

	ID  shift 88
	.  error


state 62
	regr:  regrType.freeText 

	ID  shift 83
	.  error

	freeText  goto 89

state 63
	regt:  regtType.freeText 

	ID  shift 83
	.  error

	freeText  goto 90

state 64
	infra:  infraType.ed25519Type ID ID 

	ed25519Type  shift 91
	.  error


state 65
	extra:  extraType.ed25519Type ID ID 

	ed25519Type  shift 92
	.  error


state 66
	next:  nextType.ed25519Type ID ID ID ID 

	ed25519Type  shift 93
	.  error


state 67
	assertionBody:  assertionType ID ID ID.lBracket objects rBracket 

	lBracket  shift 94
	.  error


state 68
	shardBody:  shardType ID ID shardRange.lBracket shardContent rBracket 

	lBracket  shift 95
	.  error


state 69
	shardRange:  ID.ID 
	shardRange:  ID.rangeEnd 

	ID  shift 96
	rangeEnd  shift 97
	.  error


state 70
	shardRange:  rangeBegin.ID 
	shardRange:  rangeBegin.rangeEnd 

	ID  shift 98
	rangeEnd  shift 99
	.  error


state 71
	pshardBody:  pshardType ID ID shardRange.bfAlgo bfHash ID 

	bloomKM12  shift 101
	bloomKM16  shift 102
	bloomKM20  shift 103
	bloomKM24  shift 104
	.  error

	bfAlgo  goto 100

state 72
	zoneBody:  zoneType ID ID lBracket.zoneContent rBracket 
	zoneContent: .    (10)

	.  reduce 10 (src line 228)

	zoneContent  goto 105

state 73
	signatureMeta:  sigType ed25519Type rains.ID ID ID 

	ID  shift 106
	.  error


state 74
	assertionBody:  assertionType ID lBracket objects rBracket.    (33)

	.  reduce 33 (src line 344)


state 75
	objects:  objects object.    (36)

	.  reduce 36 (src line 365)


state 76
	name:  nameType ID.lBracket oTypes rBracket 

	lBracket  shift 107
	.  error


state 77
	ip6:  ip6Type ID.    (68)

	.  reduce 68 (src line 461)


state 78
	ip4:  ip4Type ID.    (69)

	.  reduce 69 (src line 472)


state 79
	scion:  scionType ID.    (70)

	.  reduce 70 (src line 483)


state 80
	redir:  redirType ID.    (71)

	.  reduce 71 (src line 494)


state 81
	deleg:  delegType ed25519Type.ID ID 

	ID  shift 108
	.  error


state 82
	nameset:  namesetType freeText.    (73)
	freeText:  freeText.ID 

	ID  shift 109
	.  reduce 73 (src line 514)


state 83
	freeText:  ID.    (94)

	.  reduce 94 (src line 658)


state 84
	cert:  certType protocolType.certUsage hashType ID 

	trustAnchor  shift 111
	endEntity  shift 112
	zoneAuth  shift 113
	.  error

	certUsage  goto 110

state 85
	protocolType:  unspecified.    (81)

	.  reduce 81 (src line 603)


state 86
	protocolType:  tls.    (82)

	.  reduce 82 (src line 607)


state 87
	protocolType:  rhine.    (83)

	.  reduce 83 (src line 611)


state 88
	srv:  srvType ID.ID ID 

	ID  shift 114
	.  error


state 89
	regr:  regrType freeText.    (76)
	freeText:  freeText.ID 

	ID  shift 109
	.  reduce 76 (src line 546)


state 90
	regt:  regtType freeText.    (77)
	freeText:  freeText.ID 

	ID  shift 109
	.  reduce 77 (src line 554)


state 91
	infra:  infraType ed25519Type.ID ID 

	ID  shift 115
	.  error


state 92
	extra:  extraType ed25519Type.ID ID 

	ID  shift 116
	.  error


state 93
	next:  nextType ed25519Type.ID ID ID ID 

	ID  shift 117
	.  error


state 94
	assertionBody:  assertionType ID ID ID lBracket.objects rBracket 

	nameType  shift 53
	ip4Type  shift 55
	ip6Type  shift 54
	scionType  shift 56
	redirType  shift 57
	delegType  shift 58
	namesetType  shift 59
	certType  shift 60
	srvType  shift 61
	regrType  shift 62
	regtType  shift 63
	infraType  shift 64
	extraType  shift 65
	nextType  shift 66
	.  error

	objects  goto 118
	object  goto 38
	name  goto 39
	ip4  goto 41
	ip6  goto 40
	scion  goto 42
	redir  goto 43
	deleg  goto 44
	nameset  goto 45
	cert  goto 46
	srv  goto 47
	regr  goto 48
	regt  goto 49
	infra  goto 50
	extra  goto 51
	next  goto 52

state 95
	shardBody:  shardType ID ID shardRange lBracket.shardContent rBracket 
	shardContent: .    (19)

	.  reduce 19 (src line 272)

	shardContent  goto 119

state 96
	shardRange:  ID ID.    (15)

	.  reduce 15 (src line 255)


state 97
	shardRange:  ID rangeEnd.    (17)

	.  reduce 17 (src line 263)


state 98
	shardRange:  rangeBegin ID.    (16)

	.  reduce 16 (src line 259)


state 99
	shardRange:  rangeBegin rangeEnd.    (18)

	.  reduce 18 (src line 267)


state 100
	pshardBody:  pshardType ID ID shardRange bfAlgo.bfHash ID 

	shake256  shift 121
	fnv64  shift 122
	fnv128  shift 123
	.  error

	bfHash  goto 120

state 101
	bfAlgo:  bloomKM12.    (27)

	.  reduce 27 (src line 320)


state 102
	bfAlgo:  bloomKM16.    (28)

	.  reduce 28 (src line 324)


state 103
	bfAlgo:  bloomKM20.    (29)

	.  reduce 29 (src line 328)


state 104
	bfAlgo:  bloomKM24.    (30)

	.  reduce 30 (src line 332)


state 105
	zoneBody:  zoneType ID ID lBracket zoneContent.rBracket 
	zoneContent:  zoneContent.assertion 

	assertionType  shift 11
	rBracket  shift 124
	.  error

	assertion  goto 125
	assertionBody  goto 7

state 106
	signatureMeta:  sigType ed25519Type rains ID.ID ID 

	ID  shift 126
	.  error


state 107
	name:  nameType ID lBracket.oTypes rBracket 

	nameType  shift 129
	ip4Type  shift 130
	ip6Type  shift 131
	scionType  shift 132
	redirType  shift 133
	delegType  shift 134
	namesetType  shift 135
	certType  shift 136
	srvType  shift 137
	regrType  shift 138
	regtType  shift 139
	infraType  shift 140
	extraType  shift 141
	nextType  shift 142
	.  error

	oTypes  goto 127
	oType  goto 128

state 108
	deleg:  delegType ed25519Type ID.ID 

	ID  shift 143
	.  error


state 109
	freeText:  freeText ID.    (95)

	.  reduce 95 (src line 659)


state 110
	cert:  certType protocolType certUsage.hashType ID 

	noHash  shift 145
	sha256  shift 146
	sha384  shift 147
	sha512  shift 148
	shake256  shift 149
	fnv64  shift 150
	fnv128  shift 151
	.  error

	hashType  goto 144

state 111
	certUsage:  trustAnchor.    (84)

	.  reduce 84 (src line 616)


state 112
	certUsage:  endEntity.    (85)

	.  reduce 85 (src line 620)


state 113
	certUsage:  zoneAuth.    (86)

	.  reduce 86 (src line 624)


state 114
	srv:  srvType ID ID.ID 

	ID  shift 152
	.  error


state 115
	infra:  infraType ed25519Type ID.ID 

	ID  shift 153
	.  error


state 116
	extra:  extraType ed25519Type ID.ID 

	ID  shift 154
	.  error


state 117
	next:  nextType ed25519Type ID.ID ID ID 

	ID  shift 155
	.  error


state 118
	assertionBody:  assertionType ID ID ID lBracket objects.rBracket 
	objects:  objects.object 

	nameType  shift 53
	ip4Type  shift 55
	ip6Type  shift 54
	scionType  shift 56
	redirType  shift 57
	delegType  shift 58
	namesetType  shift 59
	certType  shift 60
	srvType  shift 61
	regrType  shift 62
	regtType  shift 63
	infraType  shift 64
	extraType  shift 65
	nextType  shift 66
	rBracket  shift 156
	.  error

	object  goto 75
	name  goto 39
	ip4  goto 41
	ip6  goto 40
	scion  goto 42
	redir  goto 43
	deleg  goto 44
	nameset  goto 45
	cert  goto 46
	srv  goto 47
	regr  goto 48
	regt  goto 49
	infra  goto 50
	extra  goto 51
	next  goto 52

state 119
	shardBody:  shardType ID ID shardRange lBracket shardContent.rBracket 
	shardContent:  shardContent.assertion 

	assertionType  shift 11
	rBracket  shift 157
	.  error

	assertion  goto 158
	assertionBody  goto 7

state 120
	pshardBody:  pshardType ID ID shardRange bfAlgo bfHash.ID 

	ID  shift 159
	.  error


state 121
	bfHash:  shake256.    (24)

	.  reduce 24 (src line 307)


state 122
	bfHash:  fnv64.    (25)

	.  reduce 25 (src line 311)


state 123
	bfHash:  fnv128.    (26)

	.  reduce 26 (src line 315)


state 124
	zoneBody:  zoneType ID ID lBracket zoneContent rBracket.    (9)

	.  reduce 9 (src line 219)


state 125
	zoneContent:  zoneContent assertion.    (11)

	.  reduce 11 (src line 232)


state 126
	signatureMeta:  sigType ed25519Type rains ID ID.ID 

	ID  shift 160
	.  error


state 127
	name:  nameType ID lBracket oTypes.rBracket 
	oTypes:  oTypes.oType 

	nameType  shift 129
	ip4Type  shift 130
	ip6Type  shift 131
	scionType  shift 132
	redirType  shift 133
	delegType  shift 134
	namesetType  shift 135
	certType  shift 136
	srvType  shift 137
	regrType  shift 138
	regtType  shift 139
	infraType  shift 140
	extraType  shift 141
	nextType  shift 142
	rBracket  shift 161
	.  error

	oType  goto 162

state 128
	oTypes:  oType.    (52)

	.  reduce 52 (src line 396)


state 129
	oType:  nameType.    (54)

	.  reduce 54 (src line 405)


state 130
	oType:  ip4Type.    (55)

	.  reduce 55 (src line 409)


state 131
	oType:  ip6Type.    (56)

	.  reduce 56 (src line 413)


state 132
	oType:  scionType.    (57)

	.  reduce 57 (src line 417)


state 133
	oType:  redirType.    (58)

	.  reduce 58 (src line 421)


state 134
	oType:  delegType.    (59)

	.  reduce 59 (src line 425)


state 135
	oType:  namesetType.    (60)

	.  reduce 60 (src line 429)


state 136
	oType:  certType.    (61)

	.  reduce 61 (src line 433)


state 137
	oType:  srvType.    (62)

	.  reduce 62 (src line 437)


state 138
	oType:  regrType.    (63)

	.  reduce 63 (src line 441)


state 139
	oType:  regtType.    (64)

	.  reduce 64 (src line 445)


state 140
	oType:  infraType.    (65)

	.  reduce 65 (src line 449)


state 141
	oType:  extraType.    (66)

	.  reduce 66 (src line 453)


state 142
	oType:  nextType.    (67)

	.  reduce 67 (src line 457)


state 143
	deleg:  delegType ed25519Type ID ID.    (72)

	.  reduce 72 (src line 502)


state 144
	cert:  certType protocolType certUsage hashType.ID 

	ID  shift 163
	.  error


state 145
	hashType:  noHash.    (87)

	.  reduce 87 (src line 629)


state 146
	hashType:  sha256.    (88)

	.  reduce 88 (src line 633)


state 147
	hashType:  sha384.    (89)

	.  reduce 89 (src line 637)


state 148
	hashType:  sha512.    (90)

	.  reduce 90 (src line 641)


state 149
	hashType:  shake256.    (91)

	.  reduce 91 (src line 645)


state 150
	hashType:  fnv64.    (92)

	.  reduce 92 (src line 649)


state 151
	hashType:  fnv128.    (93)

	.  reduce 93 (src line 653)


state 152
	srv:  srvType ID ID ID.    (75)

	.  reduce 75 (src line 534)


state 153
	infra:  infraType ed25519Type ID ID.    (78)

	.  reduce 78 (src line 562)


state 154
	extra:  extraType ed25519Type ID ID.    (79)

	.  reduce 79 (src line 574)


state 155
	next:  nextType ed25519Type ID ID.ID ID 

	ID  shift 164
	.  error


state 156
	assertionBody:  assertionType ID ID ID lBracket objects rBracket.    (34)

	.  reduce 34 (src line 351)


state 157
	shardBody:  shardType ID ID shardRange lBracket shardContent rBracket.    (14)

	.  reduce 14 (src line 244)


state 158
	shardContent:  shardContent assertion.    (20)

	.  reduce 20 (src line 276)


state 159
	pshardBody:  pshardType ID ID shardRange bfAlgo bfHash ID.    (23)

	.  reduce 23 (src line 288)


state 160
	signatureMeta:  sigType ed25519Type rains ID ID ID.    (101)

	.  reduce 101 (src line 689)


state 161
	name:  nameType ID lBracket oTypes rBracket.    (51)

	.  reduce 51 (src line 385)


state 162
	oTypes:  oTypes oType.    (53)

	.  reduce 53 (src line 400)


state 163
	cert:  certType protocolType certUsage hashType ID.    (74)

	.  reduce 74 (src line 522)


state 164
	next:  nextType ed25519Type ID ID ID.ID 

	ID  shift 165
	.  error


state 165
	next:  nextType ed25519Type ID ID ID ID.    (80)

	.  reduce 80 (src line 587)


48 terminals, 42 nonterminals
102 grammar rules, 166/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
91 working sets used
memory: parser 84/240000
15 extra closures
180 shift entries, 1 exceptions
54 goto entries
46 entries saved by goto default
Optimizer space used: output 211/240000
211 table entries, 0 zero
maximum spread: 48, maximum offset: 127
